--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "comportaa";
+  src: url("../public/fonts/comportaa.ttf");
+}
+
+.font-comportaa {
+  font-family: "comportaa";
+}
